Fixed display winner bug. Adjusted CSS spacing.

--- a/tictactoe.css
+++ b/tictactoe.css
@@ -7,9 +7,16 @@ body {
   height: 80vh;
 }
 
-
-.score h1 {
-  font-size: 50px;
+.score {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  top: 50px;
+  left: 100px;
+}
+.score h2 {
+  padding-left: 20px;
+  font-size: 20px;
 }
 
 .showWinner {
